tests/paczka1/fuzzy1/81363500.err
Error in line 3: VtZKWKKjKj A938 67,9
Error in line 4: VtZKWKKjKj S379 15,1
Error in line 15: S214 S379 53,7
Error in line 17: S214 A938 61,7
